--- a/cmsc100-group5-react-app/src/index.css
+++ b/cmsc100-group5-react-app/src/index.css
@@ -1,13 +1,62 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Manrope&family=Poppins&family=Space+Grotesk&display=swap');
+
+body, html {
+  font-family: 'Poppins', sans-serif;
+  margin: 0px;
+  background-image: url('../public/images/bg_1.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  row-gap: 30px;
+
+  height: 80px;
+  width: 100%;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  height: auto;
+  margin: 0px;
+  padding: 10px;
+}
+
+li {
+  list-style-type: none;
+}
+
+.link-styles {
+  text-decoration: none;
+  color: white
+}
+
+.user-icon {
+  height: 40px;
+  width: 40px;
+  border-radius: 40px;
+  color: white;
+}
+
+.link-styles:hover {
+  font-weight: bold;
+  transition: ease-in-out .5s;
+}
+
+.homepage, .viewsub {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.heading{
+  font-weight: bold;
+  color: white;
 }
