--- a/cmsc100-group5-react-app/src/index.css
+++ b/cmsc100-group5-react-app/src/index.css
@@ -8,6 +8,10 @@ body, html {
   background-repeat: no-repeat;
 }
 
+code {
+  font-family: 'Cascadia Code';
+}
+
 nav {
   display: flex;
   flex-direction: row;
@@ -56,22 +60,58 @@ li {
   align-items: center;
 }
 
-.signup-holder{
+.holder {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.signup {
+.container {
   background-color: white;
-  width: 450px;
   height: 601px;
   border-radius: 30px;
   box-shadow: 4px 4px 4px gray;
+  padding: 20px;
 }
 
-.heading{
+.signup {
+  width: 450px;
+}
+
+.login {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  padding: 0px;
+}
+
+.left, .right{
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: -30px;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.login-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0 30px 30px 0;
+}
+
+.heading {
   font-weight: bold;
   color: white;
 }
@@ -81,19 +121,58 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
+  width: 100%;
 }
 
-#signup {
+#signup, #login {
   color: #001D3D;
   font-weight: bold;
+  text-align: center;
 }
 
-.login-text {
+.text {
   color: #001D3D;
   font-weight: bold;
 }
 
 .input-rounded .MuiOutlinedInput-root {
   border-radius: 20px;
+  font-family: 'Poppins';
+}
+
+.input-rounded {
+  width: 100%;
+  max-width: 80%;
+}
+
+.MuiOutlinedInput-root::placeholder {
+  font-family: 'Poppins';
+}
+
+.existing {
+  margin: 0px;
+  margin-top: -7px;
+}
+
+.instructions {
+  display: block;
+  background-color: rgb(0, 53, 102, 0.7);
+  padding: 10px;
+  border-radius: 15px;
+  color: white;
+  margin: 0px;
+  width: 100%;
+  max-width: 80%;
+  box-sizing: border-box;
+  height: auto;
+  font-size: 14px;;
+}
+
+.info-icon {
+  margin-right: 5px;
+}
+
+.instructions-offscreen {
+  display: none;
 }
