--- a/cmsc100-group5-react-app/src/index.css
+++ b/cmsc100-group5-react-app/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope&family=Poppins&family=Space+Grotesk&display=swap');
 
+/*--home, sign up, log in--*/
+
 body, html {
   font-family: 'Poppins', sans-serif;
   margin: 0px;
