feat: Created table for the student's View Clearance Applications

--- a/cmsc100-group5-react-app/src/index.css
+++ b/cmsc100-group5-react-app/src/index.css
@@ -183,9 +183,20 @@ li {
   display: none;
 }
 
-/*---*/
+/*--stepper--*/
 
 .link-field {
   border-radius: 20px;
   width: 100%;
+}
+
+/*--view submissions--*/
+
+.data-table {
+  width: 100%;
+}
+
+.MuiToolbar-root {
+  font-family: 'Poppins';
+  color: white
 }
