--- a/cmsc100-group5-react-app/src/index.css
+++ b/cmsc100-group5-react-app/src/index.css
@@ -83,9 +83,11 @@ li {
 
 .signup {
   width: 450px;
+  margin-top: 3%;
 }
 
 .login {
+  margin-top: 5%;
   display: flex;
   flex-direction: row;
   justify-content: center;
