--- a/cmsc100-group5-react-app/src/components/stepper.css
+++ b/cmsc100-group5-react-app/src/components/stepper.css
@@ -3,6 +3,10 @@ span {
     font-size: 40px;
 }
 
+.step {
+    margin-top: 10px;
+}
+
 .step-name {
     margin-left: 20px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -22,7 +26,7 @@ span {
     color: white;
 }
 
-.active .step-num {
+.step-num.active {
     background: linear-gradient(180deg, #7DAAD2 0%, #003566 100%);
 }
 
@@ -30,9 +34,8 @@ span {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 600px;
+    height: auto;
     color: white;
-    margin-top: -50px;
 }
 
 .step-element {
