--- a/cmsc100-group5-react-app/src/index.css
+++ b/cmsc100-group5-react-app/src/index.css
@@ -100,6 +100,11 @@ li {
   margin-top: 3%;
 }
 
+.addApprover {
+  width: 450px;
+  margin-top: 0%;
+}
+
 .login {
   margin-top: 5%;
   display: flex;
