--- a/cmsc100-group5-react-app/src/components/accountCard.css
+++ b/cmsc100-group5-react-app/src/components/accountCard.css
@@ -37,6 +37,7 @@
     border-radius: 10px;
     max-width: 100%;
     overflow: hidden;
+    height: 70px;
 }
 
 .Btn-div {
@@ -57,9 +58,15 @@
     position: relative;
 }
 
+.name-holder {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 20px;
+}
+
 .account-card-name{
     justify-content: left;
     align-items: center;
-    padding: 30px;
     position: relative;
 }
