--- a/cmsc100-group5-react-app/src/index.css
+++ b/cmsc100-group5-react-app/src/index.css
@@ -95,8 +95,12 @@ li {
   padding: 20px;
 }
 
-.container.addApprover {
+.container.modal {
   margin-top: 30px;
+}
+
+.container.addApprover {
+  height: auto;
 }
 
 .signup {
@@ -104,9 +108,30 @@ li {
   margin-top: 3%;
 }
 
-.addApprover {
+.addApprover, .modal {
   width: 450px;
   margin-top: 0%;
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+}
+
+.cancel-button {
+  position: absolute;
+  top: 6%;
+  right: 35.5%;
+  background: none;
+  border: none;
+  font-size: 20px;
+  color: #001D3D;
+  cursor: pointer;
+}
+
+.cancel {
+  align-self: center;
+  justify-content: end;
 }
 
 .login {
